# nmus

./: .gitignore  main.py  pyproject.toml
notebooks/: 01_data_exploration.ipynb  02_model_training.ipynb  02_training.ipynb  03_model_test.ipynb
notebooks/genres/: 01_data_exploration.ipynb  02_model_training.ipynb
